<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Csound for Android 6.12.0</string>
    <string name="slider1">slider1</string>
    <string name="slider2">slider2</string>
    <string name="slider3">slider3</string>
    <string name="slider4">slider4</string>
    <string name="slider5">slider5</string>
    <string name="butt1">butt1</string>
    <string name="butt2">butt2</string>
    <string name="butt3">butt3</string>
    <string name="butt4">butt4</string>
    <string name="butt5">butt5</string>
    <string name="trackpad">trackpad</string>
    <string name="guide">User guide</string>
    <string name="settings">Settings</string>
    <string name="privacy">Privacy policy</string>
    <string name="settingsActivityTitle">Csound Settings</string>
</resources>