<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#000000"
    android:orientation="vertical" >

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme"
        android:minHeight="?attr/actionBarSize"
        android:id="@+id/toolbar">
    </android.support.v7.widget.Toolbar>

    <android.support.design.widget.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:tabMode="scrollable">
        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Editor" />
        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Messages" />
        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="HTML" />
        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Widgets" />
        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Help" />
        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="About" />
    </android.support.design.widget.TabLayout>

    <LinearLayout
        android:id="@+id/editor_tab"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <WebView
            android:id="@+id/editor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="0dp"></WebView>
    </LinearLayout>

    <WebView
        android:id="@+id/html_tab"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TableLayout
        android:id="@+id/widgets_tab"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <SeekBar
            android:id="@+id/seekBar1"
            style="@style/csoundSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/slider1" />
        <TextView
            style="@style/csoundSeekBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slider1"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <SeekBar
            android:id="@+id/seekBar2"
            style="@style/csoundSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            style="@style/csoundSeekBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slider2"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <SeekBar
            android:id="@+id/seekBar3"
            style="@style/csoundSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            style="@style/csoundSeekBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slider3"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <SeekBar
            android:id="@+id/seekBar4"
            style="@style/csoundSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            style="@style/csoundSeekBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slider4"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <SeekBar
            android:id="@+id/seekBar5"
            style="@style/csoundSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            style="@style/csoundSeekBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slider5"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/button1"
                style="@style/csoundButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:minHeight="36dp"
                android:text="@string/butt1"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            <Button
                android:id="@+id/button2"
                style="@style/csoundButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:minHeight="36dp"
                android:text="@string/butt2"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            <Button
                android:id="@+id/button3"
                style="@style/csoundButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:minHeight="36dp"
                android:text="@string/butt3"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            <Button
                android:id="@+id/button4"
                style="@style/csoundButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:minHeight="36dp"
                android:text="@string/butt4"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            <Button
                android:id="@+id/button5"
                style="@style/csoundButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:minHeight="36dp"
                android:text="@string/butt5"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>
        <Button
            android:id="@+id/pad"
            style="@style/csoundButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/trackpad" />
    </TableLayout>

    <ScrollView
        android:id="@+id/messages_tab"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/messageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:textColor="#00ff00"
            android:textSize="10sp"
            android:typeface="monospace" />
    </ScrollView>

    <WebView
        android:id="@+id/help_tab"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <WebView
        android:id="@+id/portal_tab"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>